@@ -1,4 +1,5 @@
 #include <stdio.h>
+#include <Eina.h>
 #include <Ecore.h>
 #include <Ecore_File.h>
 
@@ -13,6 +14,7 @@
 
 #define URL "http://www.kernel.org/pub/linux/kernel/v1.0/linux-1.0.tar.gz"
 #define DST "linux-1.0.tar.gz"
+#define DST_MIME "[x-gzip]linux-1.0.tar.gz"
 
 
 void
@@ -35,6 +37,7 @@ progress_cb(void *data, const char *file,
 int main(void)
 {
    double start;
+   Eina_Hash *headers;
 
    eina_init();
    ecore_init();
@@ -46,18 +49,36 @@ int main(void)
    start = ecore_time_get();
 
    if (ecore_file_download(URL, DST, completion_cb, progress_cb, NULL, NULL))
-   {
-      printf("Download started successfully:\n  URL: %s\n  DEST: %s\n", URL, DST);
-      ecore_main_loop_begin();
-      printf("\nTime elapsed: %f seconds\n", ecore_time_get() - start);
-      printf("Downloaded %lld bytes\n", ecore_file_size(DST));
-   }
+     {
+        printf("Download started successfully:\n  URL: %s\n  DEST: %s\n", URL, DST);
+        ecore_main_loop_begin();
+        printf("\nTime elapsed: %f seconds\n", ecore_time_get() - start);
+        printf("Downloaded %lld bytes\n", ecore_file_size(DST));
+     }
    else
-   {
-       printf("Error, can't start download\n");
-       return 1;
-   }
+     {
+        printf("Error, can't start download\n");
+        goto done;
+     }
 
+   headers = eina_hash_string_small_new(NULL);
+   eina_hash_add(headers, "Content-type", "application/x-gzip");
+
+   if (ecore_file_download_full(URL, DST_MIME, completion_cb, progress_cb, NULL, NULL, headers))
+     {
+        printf("Download started successfully:\n  URL: %s\n  DEST: %s\n", URL, DST_MIME);
+        ecore_main_loop_begin();
+        printf("\nTime elapsed: %f seconds\n", ecore_time_get() - start);
+        printf("Downloaded %lld bytes\n", ecore_file_size(DST));
+     }
+   else
+     {
+        printf("Error, can't start download\n");
+        goto done; 
+     }
+
+done:
+   if (headers) eina_hash_free(headers);
    ecore_file_shutdown();
    ecore_shutdown();
    eina_shutdown();
